# split

./: Cargo.toml  LICENSE  readme.md  split.conf.template
.github/workflows/: release.yml
src/: main.rs
