[package]
name = "split"
version = "0.0.3"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
daemonize = "0.5.0"
httparse = "1.10.1"
nix = { version = "0.29.0", features = ["process", "signal"] }
rustls-acme = "*"
signal-hook = "0.3.17"
threadpool = "1.8.1"
futures = "0.3.31"
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
